[package]
name = "accordion-rs"
version = "0.2.0"
edition = "2021"
rust-version = "1.79"
description = "↕️ A highly customizable accordion component for WASM frameworks like Yew, Dioxus, and Leptos."
license = "MIT"
keywords = ["accordion", "yew", "rust", "dioxus", "leptos"]
categories = ["web-programming", "science"]
repository = "https://github.com/opensass/accordion-rs"
documentation = "https://docs.rs/accordion-rs/"
authors = ["Mahmoud Harmouch <oss@wiseai.dev>"]
exclude = ["assets", "examples"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21.0", default-features = false, optional = true }

[features]
yew = ["dep:yew"]

[profile.release]
opt-level = "z"
debug = false
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
incremental = false

[badges]
maintenance = { status = "actively-developed" }

[dev-dependencies]
log = "0.4.22"
bump2version = "0.1.4"
